# AutowareArchitectureProposal_aip_launcher

./: .pre-commit-config.yaml
aip_urdf_compiler/: CMakeLists.txt  package.xml  readme.md
aip_urdf_compiler/cmake/: aip_cmake_urdf_compile.cmake
aip_urdf_compiler/scripts/: compile_xacro.py
aip_urdf_compiler/tests/: xacro_diff.py
aip_x1_description/: package.xml
aip_x1_description/config/: sensor_kit_calibration.yaml
aip_x1_description/urdf/: sensor_kit.xacro
aip_x1_launch/: package.xml
aip_x1_launch/config/: concatenate_and_time_sync_node.param.yaml
aip_x1_launch/launch/: imu.launch.xml  lidar.launch.xml  sensing.launch.xml
aip_x2_description/urdf/: front_unit.xacro  rear_unit.xacro  sensors.xacro  top_unit.xacro
aip_x2_gen2_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_x2_gen2_launch/: package.xml
aip_x2_gen2_launch/config/: ARS548.param.yaml  concatenate_and_time_sync_node.param.yaml  dual_return_filter.param.yaml
aip_x2_gen2_launch/launch/: hesai_OT128.launch.xml  hesai_QT128.launch.xml  imu.launch.xml  lidar.launch.xml  nebula_node_container.launch.py  pointcloud_preprocessor.launch.py  radar.launch.xml  sensing.launch.xml  topic_state_monitor.launch.py
aip_x2_launch/: package.xml
aip_x2_launch/config/: concatenate_and_time_sync_node.param.yaml
aip_xx1_description/: CMakeLists.txt
aip_xx1_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
aip_xx1_description/urdf/: sensor_kit.xacro  sensors.xacro
aip_xx1_gen2_description/: CMakeLists.txt  package.xml
aip_xx1_gen2_description/config/: sensor_kit_calibration.yaml
aip_xx1_gen2_launch/: CMakeLists.txt
aip_xx1_gen2_launch/config/: lidar_gen2.yaml  (+2 more)
aip_xx1_launch/: package.xml
common_sensor_launch/: package.xml
(+54 files in other folders)
